--- a/App.config
+++ b/App.config
@@ -9,15 +9,23 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <appSettings>
-    <add key="gamepath" value="" />
-    <add key="firstrun" value="1" />
-    <add key="hash" value="0" />
-    <add key="gender" value="1" />
-    <add key="sith" value="0" />
-    <add key="dbvers" value="0" />
-    <add key="skill" value="0" />
-    <add key="google" value="0" />
-    <add key="row_updated_from_server" value="0" />
+	  <add key="gamepath" value="" />
+	  <add key="firstrun" value="1" />
+	  <add key="hash" value="" />
+	  <add key="gender" value="1" />
+	  <add key="sith" value="0" />
+	  <add key="skill" value="0" />
+	  <add key="items" value="0" />
+	  <add key="non_dialoge" value="0" />
+	  <add key="google" value="1" />
+	  <add key="a_translate" value="1" />
+	  <add key="changes" value="1" />
+	  <add key="author" value="" />
+	  <add key="password" value="" />
+	  <add key="email" value="" />
+	  <add key="backup_row" value="0" />
+	  <add key="auth_translate" value="0" />
+	  <add key="row_updated_from_server" value="06.03.2021 06:38:28" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
