--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.27" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.113.1" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
 </packages>
